--- a/src/MusicPlayerOnline.Maui/Pages/PlaylistPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/PlaylistPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:MusicPlayerOnline.Maui.ViewModels"
+             xmlns:controls="clr-namespace:MusicPlayerOnline.Maui.Controls"
              x:Class="MusicPlayerOnline.Maui.Pages.PlaylistPage"
              Title="xx"
              BackgroundColor="White">
@@ -48,8 +49,7 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <StackLayout Orientation="Vertical"
-                 Margin="16">
+    <StackLayout Margin="16">
 
         <Label Text="播放列表"
                Margin="0,0,0,20" />
@@ -88,5 +88,7 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        <controls:Player x:Name="player" VerticalOptions="End">
+        </controls:Player>
     </StackLayout>
 </ContentPage>
